[package]
name = "waytoy"
version = "0.1.0"
edition = "2024"
authors = ["bbb651"]
license = "GPL-3.0-only"

[dependencies]
quick-xml = { version = "0.37.5", features = ["overlapped-lists", "serialize"] }
rustix = { version = "1.0.7", features = ["event", "net"] }
serde = "1.0.219"
serde_derive = "1.0.219"
